--- a/codeables/todo.txt
+++ b/codeables/todo.txt
@@ -1,1 +1,2 @@
 Don't allow users with same username but diff capitalization to create accounts.
+Push onto header 'We're sorry, we couldn't find that one!' when trying to go to a page that doesn't exist/shouldn't be accessed
